# clever

./: CMakeLists.txt  LICENCE.md  README  README.md
clever/: clever.cpp  clever_rat.cpp
docs/: cleverdocs.txt
libclever/: libconstants.cpp  libconstants.hpp  libfourhitcombos.cpp  libfourhitcombos.hpp  libfourhitcombos.test.cpp  libgeometry.cpp  libgeometry.hpp  libgeometry.test.cpp  libhitinfo.hpp  libhitselect.cpp  libhitselect.hpp  libhitselect.test.cpp  libhitselect.test.hpp  libmaximisation.cpp  libmaximisation.hpp  libtestpointcalc.cpp  libtestpointcalc.hpp  libtestpointcalc.test.cpp
